configs/envoy-rev0.json
{
    "node": {
        "id": "sidecar~10.13.160.150~my-dnstools-75d4485d95-dlt4z.default~default.svc.cluster.local",
        "cluster": "my-dnstools.default",
        "locality": {},
        "metadata": {
            "APP_CONTAINERS": "dnstools",
            "CLUSTER_ID": "Kubernetes",
            "EXCHANGE_KEYS": "NAME,NAMESPACE,INSTANCE_IPS,LABELS,OWNER,PLATFORM_METADATA,WORKLOAD_NAME,MESH_ID,SERVICE_ACCOUNT,CLUSTER_ID",
            "INSTANCE_IPS": "10.13.160.150",
            "INTERCEPTION_MODE": "REDIRECT",
            "ISTIO_PROXY_SHA": "istio-proxy:5694187abcc4aea15a701bff18858a2e9216e609",
            "ISTIO_VERSION": "1.7.4",
            "LABELS": {
                "istio.io/rev": "default",
                "pod-template-hash": "75d4485d95",
                "run": "my-dnstools",
                "security.istio.io/tlsMode": "istio",
                "service.istio.io/canonical-name": "my-dnstools",
                "service.istio.io/canonical-revision": "latest"
            },
            "MESH_ID": "cluster.local",
            "NAME": "my-dnstools-75d4485d95-dlt4z",
            "NAMESPACE": "default",
            "OWNER": "kubernetes://apis/apps/v1/namespaces/default/deployments/my-dnstools",
            "POD_PORTS": "[{\"containerPort\":80,\"protocol\":\"TCP\"},{\"containerPort\":443,\"protocol\":\"TCP\"}]",
            "PROXY_CONFIG": {
                "binaryPath": "/usr/local/bin/envoy",
                "concurrency": 2,
                "configPath": "./etc/istio/proxy",
                "controlPlaneAuthPolicy": "MUTUAL_TLS",
                "discoveryAddress": "istiod.istio-system.svc:15012",
                "drainDuration": "45s",
                "envoyAccessLogService": {},
                "envoyMetricsService": {},
                "parentShutdownDuration": "60s",
                "proxyAdminPort": 15000,
                "proxyMetadata": { "DNS_AGENT": "" },
                "serviceCluster": "my-dnstools.default",
                "statNameLength": 189,
                "statusPort": 15020,
                "terminationDrainDuration": "5s",
                "tracing": {
                    "zipkin": { "address": "zipkin.istio-system:9411" }
                }
            },
            "SDS": "true",
            "SERVICE_ACCOUNT": "default",
            "WORKLOAD_NAME": "my-dnstools"
        }
    },
    "layered_runtime": {
        "layers": [
            {
                "name": "deprecation",
                "static_layer": {
                    "envoy.deprecated_features:envoy.config.listener.v3.Listener.hidden_envoy_deprecated_use_original_dst": true
                }
            },
            {
                "name": "admin",
                "admin_layer": {}
            }
        ]
    },
    "stats_config": {
        "use_all_default_tags": false,
        "stats_tags": [
            {
                "tag_name": "cluster_name",
                "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
            },
            {
                "tag_name": "tcp_prefix",
                "regex": "^tcp\\.((.*?)\\.)\\w+?$"
            },
            {
                "regex": "(response_code=\\.=(.+?);\\.;)|_rq(_(\\.d{3}))$",
                "tag_name": "response_code"
            },
            {
                "tag_name": "response_code_class",
                "regex": "_rq(_(\\dxx))$"
            },
            {
                "tag_name": "http_conn_manager_listener_prefix",
                "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
            },
            {
                "tag_name": "http_conn_manager_prefix",
                "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
            },
            {
                "tag_name": "listener_address",
                "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
            },
            {
                "tag_name": "mongo_prefix",
                "regex": "^mongo\\.(.+?)\\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$"
            },
            {
                "regex": "(reporter=\\.=(.*?);\\.;)",
                "tag_name": "reporter"
            },
            {
                "regex": "(source_namespace=\\.=(.*?);\\.;)",
                "tag_name": "source_namespace"
            },
            {
                "regex": "(source_workload=\\.=(.*?);\\.;)",
                "tag_name": "source_workload"
            },
            {
                "regex": "(source_workload_namespace=\\.=(.*?);\\.;)",
                "tag_name": "source_workload_namespace"
            },
            {
                "regex": "(source_principal=\\.=(.*?);\\.;)",
                "tag_name": "source_principal"
            },
            {
                "regex": "(source_app=\\.=(.*?);\\.;)",
                "tag_name": "source_app"
            },
            {
                "regex": "(source_version=\\.=(.*?);\\.;)",
                "tag_name": "source_version"
            },
            {
                "regex": "(source_cluster=\\.=(.*?);\\.;)",
                "tag_name": "source_cluster"
            },
            {
                "regex": "(destination_namespace=\\.=(.*?);\\.;)",
                "tag_name": "destination_namespace"
            },
            {
                "regex": "(destination_workload=\\.=(.*?);\\.;)",
                "tag_name": "destination_workload"
            },
            {
                "regex": "(destination_workload_namespace=\\.=(.*?);\\.;)",
                "tag_name": "destination_workload_namespace"
            },
            {
                "regex": "(destination_principal=\\.=(.*?);\\.;)",
                "tag_name": "destination_principal"
            },
            {
                "regex": "(destination_app=\\.=(.*?);\\.;)",
                "tag_name": "destination_app"
            },
            {
                "regex": "(destination_version=\\.=(.*?);\\.;)",
                "tag_name": "destination_version"
            },
            {
                "regex": "(destination_service=\\.=(.*?);\\.;)",
                "tag_name": "destination_service"
            },
            {
                "regex": "(destination_service_name=\\.=(.*?);\\.;)",
                "tag_name": "destination_service_name"
            },
            {
                "regex": "(destination_service_namespace=\\.=(.*?);\\.;)",
                "tag_name": "destination_service_namespace"
            },
            {
                "regex": "(destination_port=\\.=(.*?);\\.;)",
                "tag_name": "destination_port"
            },
            {
                "regex": "(destination_cluster=\\.=(.*?);\\.;)",
                "tag_name": "destination_cluster"
            },
            {
                "regex": "(request_protocol=\\.=(.*?);\\.;)",
                "tag_name": "request_protocol"
            },
            {
                "regex": "(request_operation=\\.=(.*?);\\.;)",
                "tag_name": "request_operation"
            },
            {
                "regex": "(request_host=\\.=(.*?);\\.;)",
                "tag_name": "request_host"
            },
            {
                "regex": "(response_flags=\\.=(.*?);\\.;)",
                "tag_name": "response_flags"
            },
            {
                "regex": "(grpc_response_status=\\.=(.*?);\\.;)",
                "tag_name": "grpc_response_status"
            },
            {
                "regex": "(connection_security_policy=\\.=(.*?);\\.;)",
                "tag_name": "connection_security_policy"
            },
            {
                "regex": "(permissive_response_code=\\.=(.*?);\\.;)",
                "tag_name": "permissive_response_code"
            },
            {
                "regex": "(permissive_response_policyid=\\.=(.*?);\\.;)",
                "tag_name": "permissive_response_policyid"
            },
            {
                "regex": "(source_canonical_service=\\.=(.*?);\\.;)",
                "tag_name": "source_canonical_service"
            },
            {
                "regex": "(destination_canonical_service=\\.=(.*?);\\.;)",
                "tag_name": "destination_canonical_service"
            },
            {
                "regex": "(source_canonical_revision=\\.=(.*?);\\.;)",
                "tag_name": "source_canonical_revision"
            },
            {
                "regex": "(destination_canonical_revision=\\.=(.*?);\\.;)",
                "tag_name": "destination_canonical_revision"
            },
            {
                "regex": "(cache\\.(.+?)\\.)",
                "tag_name": "cache"
            },
            {
                "regex": "(component\\.(.+?)\\.)",
                "tag_name": "component"
            },
            {
                "regex": "(tag\\.(.+?);\\.)",
                "tag_name": "tag"
            },
            {
                "regex": "(wasm_filter\\.(.+?)\\.)",
                "tag_name": "wasm_filter"
            }
        ],
        "stats_matcher": {
            "inclusion_list": {
                "patterns": [
                    {
                        "prefix": "reporter="
                    },
                    {
                        "prefix": "cluster_manager"
                    },
                    {
                        "prefix": "listener_manager"
                    },
                    {
                        "prefix": "http_mixer_filter"
                    },
                    {
                        "prefix": "tcp_mixer_filter"
                    },
                    {
                        "prefix": "server"
                    },
                    {
                        "prefix": "cluster.xds-grpc"
                    },
                    {
                        "prefix": "wasm"
                    },
                    {
                        "prefix": "component"
                    }
                ]
            }
        }
    },
    "admin": {
        "access_log_path": "/dev/null",
        "profile_path": "/var/lib/istio/data/envoy.prof",
        "address": {
            "socket_address": {
                "address": "127.0.0.1",
                "port_value": 15000
            }
        }
    },
    "dynamic_resources": {
        "lds_config": {
            "ads": {},
            "resource_api_version": "V3"
        },
        "cds_config": {
            "ads": {},
            "resource_api_version": "V3"
        },
        "ads_config": {
            "api_type": "GRPC",
            "transport_api_version": "V3",
            "grpc_services": [
                {
                    "envoy_grpc": {
                        "cluster_name": "xds-grpc"
                    }
                }
            ]
        }
    },
    "static_resources": {
        "clusters": [
            {
                "name": "prometheus_stats",
                "type": "STATIC",
                "connect_timeout": "0.250s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "prometheus_stats",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "protocol": "TCP",
                                                "address": "127.0.0.1",
                                                "port_value": 15000
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                }
            },
            {
                "name": "agent",
                "type": "STATIC",
                "connect_timeout": "0.250s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "prometheus_stats",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "protocol": "TCP",
                                                "address": "127.0.0.1",
                                                "port_value": 15020
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                }
            },
            {
                "name": "sds-grpc",
                "type": "STATIC",
                "http2_protocol_options": {},
                "connect_timeout": "1s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "sds-grpc",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "pipe": {
                                                "path": "./etc/istio/proxy/SDS"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                }
            },
            {
                "name": "xds-grpc",
                "type": "STRICT_DNS",
                "respect_dns_ttl": true,
                "dns_lookup_family": "V4_ONLY",
                "connect_timeout": "1s",
                "lb_policy": "ROUND_ROBIN",
                "transport_socket": {
                    "name": "envoy.transport_sockets.tls",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                        "sni": "istiod.istio-system.svc",
                        "common_tls_context": {
                            "alpn_protocols": ["h2"],
                            "tls_certificate_sds_secret_configs": [
                                {
                                    "name": "default",
                                    "sds_config": {
                                        "resource_api_version": "V3",
                                        "initial_fetch_timeout": "0s",
                                        "api_config_source": {
                                            "api_type": "GRPC",
                                            "transport_api_version": "V3",
                                            "grpc_services": [
                                                {
                                                    "envoy_grpc": {
                                                        "cluster_name": "sds-grpc"
                                                    }
                                                }
                                            ]
                                        }
                                    }
                                }
                            ],
                            "validation_context": {
                                "trusted_ca": {
                                    "filename": "./var/run/secrets/istio/root-cert.pem"
                                },
                                "match_subject_alt_names": [
                                    { "exact": "istiod.istio-system.svc" }
                                ]
                            }
                        }
                    }
                },
                "load_assignment": {
                    "cluster_name": "xds-grpc",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "istiod.istio-system.svc",
                                                "port_value": 15012
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "circuit_breakers": {
                    "thresholds": [
                        {
                            "priority": "DEFAULT",
                            "max_connections": 100000,
                            "max_pending_requests": 100000,
                            "max_requests": 100000
                        },
                        {
                            "priority": "HIGH",
                            "max_connections": 100000,
                            "max_pending_requests": 100000,
                            "max_requests": 100000
                        }
                    ]
                },
                "upstream_connection_options": {
                    "tcp_keepalive": {
                        "keepalive_time": 300
                    }
                },
                "max_requests_per_connection": 1,
                "http2_protocol_options": {}
            },

            {
                "name": "zipkin",
                "type": "STRICT_DNS",
                "respect_dns_ttl": true,
                "dns_lookup_family": "V4_ONLY",
                "connect_timeout": "1s",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "zipkin",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "zipkin.istio-system",
                                                "port_value": 9411
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                }
            }
        ],
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "protocol": "TCP",
                        "address": "0.0.0.0",
                        "port_value": 15090
                    }
                },
                "filter_chains": [
                    {
                        "filters": [
                            {
                                "name": "envoy.http_connection_manager",
                                "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                                    "codec_type": "AUTO",
                                    "stat_prefix": "stats",
                                    "route_config": {
                                        "virtual_hosts": [
                                            {
                                                "name": "backend",
                                                "domains": ["*"],
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "prefix": "/stats/prometheus"
                                                        },
                                                        "route": {
                                                            "cluster": "prometheus_stats"
                                                        }
                                                    }
                                                ]
                                            }
                                        ]
                                    },
                                    "http_filters": [
                                        {
                                            "name": "envoy.router",
                                            "typed_config": {
                                                "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                ]
            },
            {
                "address": {
                    "socket_address": {
                        "protocol": "TCP",
                        "address": "0.0.0.0",
                        "port_value": 15021
                    }
                },
                "filter_chains": [
                    {
                        "filters": [
                            {
                                "name": "envoy.http_connection_manager",
                                "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                                    "codec_type": "AUTO",
                                    "stat_prefix": "agent",
                                    "route_config": {
                                        "virtual_hosts": [
                                            {
                                                "name": "backend",
                                                "domains": ["*"],
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "prefix": "/healthz/ready"
                                                        },
                                                        "route": {
                                                            "cluster": "agent"
                                                        }
                                                    }
                                                ]
                                            }
                                        ]
                                    },
                                    "http_filters": [
                                        {
                                            "name": "envoy.router",
                                            "typed_config": {
                                                "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                ]
            }
        ]
    },
    "tracing": {
        "http": {
            "name": "envoy.zipkin",
            "typed_config": {
                "@type": "type.googleapis.com/envoy.config.trace.v3.ZipkinConfig",
                "collector_cluster": "zipkin",
                "collector_endpoint": "/api/v2/spans",
                "collector_endpoint_version": "HTTP_JSON",
                "trace_id_128bit": true,
                "shared_span_context": false
            }
        }
    }
}
